welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: ambiguous reference to overloaded definition,
both method faireMotif1 in class PatternPicture of type (c: java.awt.Color)Unit
and  method faireMotif1 in class PatternPicture of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
  faireMotif1 (Color.RED)
  ^PatternPicture:3: error: not found: value faireMotif2
  faireMotif2(Color.BLUE)
  ^PatternPicture:7: error: not found: value setColourBrosse
  setColourBrosse(c)
  ^PatternPicture:20: error: method faireMotif1 is defined twice
  conflicting symbols both originated in file 'plm.runtime1.PatternPicture'
def faireMotif1( c: Color) {
    ^